--- a/Playfair Cipher/Playfair Cipher.ipynb
+++ b/Playfair Cipher/Playfair Cipher.ipynb
@@ -22,7 +22,7 @@
         "id": "AyjKmn_16MiV"
       },
       "source": [
-        "# Assignment-2"
+        "# playfair cipher"
       ]
     },
     {
@@ -31,7 +31,7 @@
         "id": "7uwTj_Vg6EuD"
       },
       "source": [
-        "**Implement playfair cipher in 'C' or python.  Upload your write-up and code**"
+        "**Implement playfair cipher in  python. **"
       ]
     },
     {
